# nlpp

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FiniteDifference.h  Modelo.h  Parameters.h  README.md  SpectraHelpers.h  TODO.md  t1.cpp  t2.cpp  t3.cpp  t4.cpp
benchmark/: CMakeLists.txt
benchmark/Helpers/: CMakeLists.txt
benchmark/Helpers/FiniteDifference/: FiniteDifference.cpp
benchmark/TrustRegion/: CMakeLists.txt
benchmark/TrustRegion/IterativeTR/: IterativeTR.cpp
bindings/js/: CMakeLists.txt
bindings/js/src/: Optimizer.cpp
bindings/python/: CMakeLists.txt  test.cpp
bindings/python/src/: nlpy.cpp
examples/: CMakeLists.txt  t1.cpp  t2.cpp
examples/CG/: CG.cpp
examples/FiniteDifference/: CMakeLists.txt  FiniteDifference.cpp
examples/GradientDescent/: GradientDescent.cpp
examples/GradientDescent/Helpers/: Helpers.h
examples/Helpers/: CMakeLists.txt  Output.cpp
examples/HyperbolicPenalty/: CMakeLists.txt  HyperbolicPenalty.cpp
examples/LineSearch/: CMakeLists.txt
examples/LineSearch/Backtracking/: Backtracking.cpp
examples/LineSearch/Bracketing/: Bracketing.cpp
examples/LineSearch/Brents/: Brents.cpp
examples/LineSearch/GoldenSection/: GoldenSection.cpp
examples/LineSearch/Goldstein/: Goldstein.cpp
examples/LineSearch/StrongWolfe/: StrongWolfe.cpp
examples/Newton/: CMakeLists.txt  Newton.cpp
examples/QuasiNewton/: CMakeLists.txt
examples/QuasiNewton/BFGS/: BFGS.cpp
examples/QuasiNewton/LBFGS/: LBFGS.cpp
examples/QuasiNewton/SR1/: SR1.cpp
examples/TrustRegion/: CMakeLists.txt
examples/TrustRegion/CauchyPoint/: CauchyPoint.cpp
examples/TrustRegion/DogLeg/: DogLeg.cpp
examples/TrustRegion/IndefiniteDogLeg/: IndefiniteDogLeg.cpp
examples/TrustRegion/IterativeTR/: IterativeTR.cpp
examples/Wrappers/: Wrappers.cpp
examples/cg/: cg.cpp
examples/citgo/knn/: knn.cpp
examples/cmake/: AddExample.cmake
examples/direct/: direct.cpp
examples/gradient_descent/: gradient_descent.cpp
examples/hyberbolic_penalty/: hyberbolic_penalty.cpp
examples/line_search/backtracking/: backtracking.cpp
examples/line_search/goldstein/: goldstein.cpp
examples/line_search/strong_wolfe/: strong_wolfe.cpp
examples/newton/: CMakeLists.txt  newton.cpp
examples/quasi_newton/bfgs/: bfgs.cpp
examples/quasi_newton/lbfgs/: lbfgs.cpp
examples/src/CG/: CG.cpp  CMakeLists.txt
examples/src/FiniteDifference/: FiniteDifference.cpp
examples/src/GradientDescent/: CMakeLists.txt  EmBind.cpp  GradientDescent.cpp  t1.js  t1.js.mem
examples/src/HyperbolicPenalty/: CMakeLists.txt  HyperbolicPenalty.cpp
examples/src/LineSearch/: CMakeLists.txt
examples/src/Newton/: Newton.cpp
examples/src/QuasiNewton/: CMakeLists.txt
examples/src/Wrappers/: CMakeLists.txt  Gradient.cpp  Wrappers.cpp
examples/torch/: CMakeLists.txt  t1.cpp  t2.cpp  t3.cpp  t5.cpp  t6.cpp
examples/utils/: finite_difference.cpp  output.cpp  stop.cpp  wrappers.cpp
examples/utils/wrappers/: constraints.cpp  domain.cpp  functions.cpp
examples/wrappers/: wrappers.cpp
include/nlpp/: CMakeLists.txt
include/nlpp/CG/: CG.h
include/nlpp/Direct/: Direct.h
include/nlpp/GradientDescent/: GradientDescent.h
include/nlpp/Helpers/: Config.h  Config.h.in  FiniteDifference.h  ForwardDeclarations.h  Gradient.h  Helpers.h  Include.h  Optimizer.h  Output.h  Parameters.h  Poly.h  SpectraHelpers.h  Stop.h  Types.h  Wrappers.h
include/nlpp/HyperbolicPenalty/: HyperbolicPenalty.h
include/nlpp/LineSearch/: LineSearch.h
include/nlpp/Newton/: Factorizations.h  Newton.h
include/nlpp/TestFunctions/: Rosenbrock.h  Shekel.h  TreeBarTruss.h
include/nlpp/TrustRegion/: TrustRegion.h
lib/cpp/: CMakeLists.txt  test.cpp
lib/js/: CMakeLists.txt
lib/js/src/: Optimizer.cpp
lib/python/: CMakeLists.txt  test.cpp  test.py
nlpp/: CMakeLists.txt
nlpp/CG/: CG.h  CG_dec.h  CG_def.h  projections.hpp  projections_dec.hpp
nlpp/Direct/: Direct.h  direct.hpp  direct_dec.hpp
nlpp/GradientDescent/: GradientDescent.h  GradientDescent.hpp  GradientDescent_dec.hpp
nlpp/Helpers/: Config.h  Helpers.h  Optimizer.h  Stop.h  Types.h  Wrappers.h
nlpp/HyperbolicPenalty/: HyperbolicPenalty.h
nlpp/LineSearch/: LineSearch.h  LineSearch.hpp
nlpp/LineSearch/Bracketing/: Bracketing.h
nlpp/LineSearch/Brents/: Brents.h
nlpp/LineSearch/Dynamic/: Dynamic.h
nlpp/Newton/: Factorizations.h  Newton.h
nlpp/TestFunctions/: Hartmann.h  Rosenbrock.h  Shekel.h  TreeBarTruss.h  hock_schittkowski.hpp  tension_spring.hpp
nlpp/TrustRegion/: TrustRegion.h
nlpp/cg/: cg.hpp  cg_dec.hpp  projections_dec.hpp
nlpp/citgo/: citgo.hpp  citgo_def.hpp
nlpp/direct/: direct.hpp  direct_dec.hpp
nlpp/gradient_descent/: gradient_descent.hpp  gradient_descent_dec.hpp
nlpp/helpers/: config.hpp  config.hpp.in  forwardDeclarations.hpp  forward_declarations.hpp  helpers.hpp  helpers_dec.hpp  include.hpp  macros.hpp  status.hpp  status_dec.hpp  traits.hpp  types.hpp
nlpp/hyperbolic_penalty/: hyperbolic_penalty.hpp  hyperbolic_penalty_dec.hpp
nlpp/line_search/: line_search.hpp
nlpp/newton/: factorizations.hpp  factorizations_dec.hpp  newton.hpp  newton_dec.hpp
nlpp/utils/: finiteDifference.hpp  finiteDifference_dec.hpp  finite_difference_dec.hpp  optimizer.hpp  output.hpp  spectraWrapper.hpp  stop.hpp  wrappers.hpp  wrappers_dec.hpp
tests/: CMakeLists.txt
tests/CG/: CG.cpp  CMakeLists.txt
tests/GradientDescent/: CMakeLists.txt  GradientDescent.cpp
tests/GradientOptimizer/: CMakeLists.txt  GradientOptimizer.cpp
tests/Helpers/: CMakeLists.txt
tests/HyperbolicPenalty/: CMakeLists.txt  HyperbolicPenalty.cpp
tests/LineSearch/: CMakeLists.txt
tests/LineSearchOptimizer/: CMakeLists.txt  LineSearchOptimizer.cpp
tests/Newton/: CMakeLists.txt  Newton.cpp
tests/QuasiNewton/: CMakeLists.txt
tests/TrustRegion/: CMakeLists.txt  TrustRegion.cpp
tests/cg/: cg.cpp
tests/helpers/: finite_difference.cpp  output.cpp
tests/optimizer/: optimizer.cpp
tests/trust_region/: trust_region.cpp
tests/utils/: finite_difference.cpp  output.cpp  stop.cpp
torch/: CMakeLists.txt  test.cpp
(+201 files in other folders)
