find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

add_executable(t1 ${CMAKE_CURRENT_SOURCE_DIR}/t1.cpp)
add_executable(t2 ${CMAKE_CURRENT_SOURCE_DIR}/t2.cpp)
add_executable(t3 ${CMAKE_CURRENT_SOURCE_DIR}/t3.cpp)
target_link_libraries(t1 "${TORCH_LIBRARIES}" nlpp)
target_link_libraries(t2 "${TORCH_LIBRARIES}" nlpp)
target_link_libraries(t3 "${TORCH_LIBRARIES}" nlpp)
# set_property(TARGET t1 PROPERTY CXX_STANDARD 17)